Fixed setting all attributes on an inserted link, b=97455, r=jfrancis, sr=kin